--- a/Part4_CMVvsUnpopO_DataExploration.ipynb
+++ b/Part4_CMVvsUnpopO_DataExploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12a1263c",
+   "id": "cc594622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c53f978a",
+   "id": "0556ef59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89899656",
+   "id": "74156d9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f87df21",
+   "id": "3792a090",
    "metadata": {},
    "source": [
     "***Exploratory Data Analysis***"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bc407fa7",
+   "id": "d9b38734",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fa344528",
+   "id": "a9f585ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b193e11c",
+   "id": "e5fa9f0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c0c456a3",
+   "id": "00251504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1aea82df",
+   "id": "d934d024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "876e5aba",
+   "id": "b295e205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e9111ce5",
+   "id": "ccbd1f4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9206b257",
+   "id": "5038ea00",
    "metadata": {},
    "source": [
     "- Additional cleaning after engineering."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0cc2e874",
+   "id": "5a12416b",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "38eda161",
+   "id": "e19f8c07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b440e11",
+   "id": "d3b8aa61",
    "metadata": {},
    "source": [
     "- Check for artifacts with oddly high means."
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bc0ea8fb",
+   "id": "a07a64ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fe7eea3e",
+   "id": "cd72852a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43782dec",
+   "id": "1fb6757e",
    "metadata": {},
    "source": [
     "- Nothing out of the ordinary here."
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc8843f5",
+   "id": "9856fd8c",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72fb3bb",
+   "id": "c0029819",
    "metadata": {},
    "source": [
     "- Drop additional stopwords that were not covered by CountVectorizer."
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "960de947",
+   "id": "05f2d25d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a8c2260f",
+   "id": "8e0d7a6b",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9f56bf37",
+   "id": "2f3731d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eba2ec8e",
+   "id": "a272a21b",
    "metadata": {},
    "source": [
     "- Most frequently used words, least frequently used words."
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a3ef6da7",
+   "id": "2092908f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bf439c0a",
+   "id": "a4486ef1",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e097698b",
+   "id": "3c341f89",
    "metadata": {},
    "source": [
     "- Many posts appear to talk about (perhaps unsurprisingly) opinions, given the frequency of people, like, don't, say, feel, know, and think."
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b325aaf5",
+   "id": "2e26e1c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5cd19a60",
+   "id": "7b214e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "adad5ae7",
+   "id": "004102b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c00280d1",
+   "id": "0935fb61",
    "metadata": {},
    "source": [
     "- Outlier and distributions check."
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "adc69c89",
+   "id": "4b86fb90",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97aed10",
+   "id": "43f3fc2a",
    "metadata": {},
    "source": [
     "- No need to remove these outliers, as post_score and num_comments both just indicate additional text data that will not be used in this analysis.\n",
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8921d265",
+   "id": "53fc9949",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "62629ec5",
+   "id": "94962313",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2175e519",
+   "id": "bddc5e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a4c5b683",
+   "id": "46c3bdf0",
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa09874",
+   "id": "574fcd69",
    "metadata": {},
    "source": [
     "- Unpopular opinion is slightly more negative in terms of language on average, but shows a higher spread across all sentiments (std)."
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d472df95",
+   "id": "e3f21bb6",
    "metadata": {},
    "source": [
     "- Create a ratio of all word counts between the two subreddits."
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "248de045",
+   "id": "19b382b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "96a6e2bb",
+   "id": "b1c84769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2088dc5",
+   "id": "c9f13c5f",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e188725",
+   "id": "23fe9558",
    "metadata": {},
    "source": [
     "- These charts show interesting differences between the two subreddits:\n",
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6c72970c",
+   "id": "eefbb06d",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0adcc501",
+   "id": "5e34a5c6",
    "metadata": {},
    "source": [
     "- Trump does appear more often in change my view than in unpopular opinion. Politics does as well, and the three together seem to indicate that political opinions are voice more often in change my view than in unpopular opinion as a whole. I am curious why Biden appears 90 times more often in cmv and Trump only appears 3 times more often."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4dc2afd6",
+   "id": "4beb2f48",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085002b5",
+   "id": "2a1a81d2",
    "metadata": {},
    "source": [
     "- It appears that Biden's appearance so often in cmv compared to unpop may be due to low sample size - one tenth of the appearances that Trump makes."
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6df5b8ef",
+   "id": "1dfc14cd",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "cb06421e",
+   "id": "0d1c76bb",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2c400349",
+   "id": "5aa403b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +957,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd11bfe6",
+   "id": "297ba00e",
+   "metadata": {},
+   "source": [
+    "- Given the information found here, it is likely enough that the problem statement could be answered simply with this information. However, let us see what new light classification models may shine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94b25946",
    "metadata": {},
    "source": [
     "- Save edited csv."
@@ -966,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6f1195fa",
+   "id": "222206fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +983,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a8e02d5",
+   "id": "19e1558c",
    "metadata": {},
    "source": [
     "- On to part 5 ->"
