--- a/Part6_CMVvsUnpopO_ModelAnalysis.ipynb
+++ b/Part6_CMVvsUnpopO_ModelAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "732619c8",
+   "id": "f6cf1f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f91f5c",
+   "id": "0a59aefc",
    "metadata": {},
    "source": [
     "- Import data."
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "adf55ad3",
+   "id": "15f796f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2172b73f",
+   "id": "a9990deb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07aeeab7",
+   "id": "0d3cffb2",
    "metadata": {},
    "source": [
     "- Load models."
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3b658d30",
+   "id": "a864f5b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "46495897",
+   "id": "0ccb6aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9b0735b9",
+   "id": "6fc5dafc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e8e1aa8a",
+   "id": "1396500a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "65bd9c03",
+   "id": "b19374f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "239f1a77",
+   "id": "ec366e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "85b48737",
+   "id": "b5d70914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "40185e35",
+   "id": "d5d87aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2c38b3dc",
+   "id": "d4f09104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "978f3dbe",
+   "id": "840d001b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "53b2d3f7",
+   "id": "d0ad7568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dfee21f",
+   "id": "603a7d54",
    "metadata": {},
    "source": [
     "- Recreate train/test split."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "d7cc1809",
+   "id": "43d45079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56784c5",
+   "id": "81286b3b",
    "metadata": {},
    "source": [
     "- Score models."
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4de1fd48",
+   "id": "f32fed38",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7cad6da2",
+   "id": "fa884661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "61fb27a6",
+   "id": "bb8dccf3",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "08f7b490",
+   "id": "7edd851e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "93c5953b",
+   "id": "9b73a7b9",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066d69ce",
+   "id": "a25db00a",
    "metadata": {},
    "source": [
     "- From these we can select only the models that are above baseline accuracy (.56323), ruling out 4 of our 10 models. Some overfitting for XGBoost models, but strong enough on test that I will disregard it.\n",
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0a875b8f",
+   "id": "67f432ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b4d04d9",
+   "id": "0a05e02b",
    "metadata": {},
    "source": [
     "- Plot XGBoost model features."
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2dcf3253",
+   "id": "74d30631",
    "metadata": {
     "tags": []
    },
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f8a01532",
+   "id": "502e9d86",
    "metadata": {
     "tags": []
    },
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "60670b0c",
+   "id": "2001fb3e",
    "metadata": {
     "tags": []
    },
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c78d7d3",
+   "id": "ed0c648b",
    "metadata": {},
    "source": [
     "- A notable amount of what I would call 'debate' language and political language. Given the politeness of debate language when compared to the hyperbolic nature of Unpopular Opinion, it seems likely that these are features that identify Change my View."
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac22b034",
+   "id": "b08341e2",
    "metadata": {},
    "source": [
     "- Plot Logistic Regression model features."
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "52ad3261",
+   "id": "ee34607e",
    "metadata": {
     "tags": []
    },
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "32a04c70",
+   "id": "996d4688",
    "metadata": {
     "tags": []
    },
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4445d9ec",
+   "id": "bd11d1e6",
    "metadata": {},
    "source": [
     "- The above hypothesis is confirmed here. \"Believe\", \"argument\", \"evidence\", etc. are all formal disagreement language. Some additional confirmation that political events are relevant to the subreddit as well."
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b10a6039",
+   "id": "60f24670",
    "metadata": {
     "tags": []
    },
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "75972406",
+   "id": "f8d311c5",
    "metadata": {
     "tags": []
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c63c41c3",
+   "id": "1167feb5",
    "metadata": {},
    "source": [
     "- Similar to what was found in EDA, the Logistic Regression shows that almost all hyperbolic negative adjectives ('hate', 'bullshit', etc.) identify Unpopular Opinion. All sentiment scores are included here, indicating that the more extreme spread of sentiment overall helps identify Unpopular Opinion posts."
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1694c2",
+   "id": "4918b918",
    "metadata": {},
    "source": [
     "***Conclusions***"
@@ -717,17 +717,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77af029d",
+   "id": "84a41438",
    "metadata": {},
    "source": [
-    "- Overall, it appears that Unpopular Opinion is a good target forum for a demo of astroturf marketing. Denigrating things is very common there, which would make the goal of generating negative public sentiment for our clientele’s competing products simple to add to the mix. Additionally, inserting a promotion for our clientele's product in the text statement of a reddit post would not appear to be amiss.\n",
+    "- Overall, it appears that Unpopular Opinion is a good target forum for a demo of astroturf marketing. Denigrating media is very common there, which would make the goal of generating negative public sentiment for our clientele’s competing products simple to add to the mix. Additionally, inserting a promotion for our clientele's product in the text statement of a reddit post would not appear to be amiss, as an argumentative point is frequently seen in the post text.\n",
     "- Change my View does not appear to have many characteristics that would make it a useful staging ground for a demo. There is a focus on geopolitical or societal issues, with little chance of making a stand for a clientele’s product without being seen as clear advertising. \n",
     "- I propose the company move forward with a demo for our clients on the Unpopular Opinion subreddit.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba186362",
+   "id": "b74d4997",
    "metadata": {},
    "source": [
     "***Executive Summary***"
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c43e95",
+   "id": "5a76e2c3",
    "metadata": {},
    "source": [
     "- [FAKE MEDIA GROUP] is one of the fastest growing companies on the market. You have original, interesting content all over your network. The problem is getting more users to keep that growth sustained.\n",
