--- a/Part5_CMVvsUnpopO_Modeling.ipynb
+++ b/Part5_CMVvsUnpopO_Modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bdcf2452",
+   "id": "3f4baaf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "092654c1",
+   "id": "fe2e5e49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10b23a89",
+   "id": "1a9528b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d247329f",
+   "id": "5c6ef67a",
    "metadata": {},
    "source": [
     "***Model creation and optimization***"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b303199e",
+   "id": "b50fd131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857d89f7",
+   "id": "6691f57d",
    "metadata": {},
    "source": [
-    "- Dummy"
+    "- Baseline score. The larger number will be the baseline for accuracy when testing models."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "296579af",
+   "id": "7c0911f2",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630a0aa4",
+   "id": "1a206aaf",
    "metadata": {},
    "source": [
     "- XGBoost"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7901ac23",
+   "id": "72af9a1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9022b5f2",
+   "id": "13e2f3a1",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "858be044",
+   "id": "722aa81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a20dbc15",
+   "id": "7685e862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e68e1591",
+   "id": "c2fe4582",
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5135796e",
+   "id": "ad4250c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fdbb7529",
+   "id": "141fd37c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e50aa3f",
+   "id": "08e1c152",
    "metadata": {},
    "source": [
     "- Logistic Regression"
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a4deea9c",
+   "id": "d2facb77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ef4744ad",
+   "id": "b2a336b7",
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "de30d524",
+   "id": "75197fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f26658de",
+   "id": "948be889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f9a61646",
+   "id": "2b17fa11",
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e7d46ed6",
+   "id": "c5f6af9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4db132d0",
+   "id": "eea2fb1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1eca285",
+   "id": "6fc172c9",
    "metadata": {},
    "source": [
     "- Decision Tree"
@@ -2057,7 +2057,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4b7e073b",
+   "id": "b4a5025c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fa314e6d",
+   "id": "fe9d3746",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "73080b46",
+   "id": "0f280775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2143,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ea16788b",
+   "id": "cc0edb9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2153,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c9458750",
+   "id": "2267be4d",
    "metadata": {},
    "outputs": [
     {
@@ -2186,7 +2186,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e3f68ddb",
+   "id": "333a4332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "16c10c91",
+   "id": "ff5fab25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124d21d4",
+   "id": "5b5b0fd8",
    "metadata": {},
    "source": [
     "- Random Forest"
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0e277260",
+   "id": "99a0bba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8bbddf79",
+   "id": "71dc51d7",
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4de0d0d0",
+   "id": "735a9218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2301,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d299c993",
+   "id": "73ad8269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "80daf876",
+   "id": "2f867c2c",
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9facaf14",
+   "id": "ec357b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,7 +2354,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1b6426ff",
+   "id": "ffe13abf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8273c3",
+   "id": "2a996b43",
    "metadata": {},
    "source": [
     "- Extra Trees"
@@ -2372,7 +2372,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cbc81f44",
+   "id": "64341aaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2416,7 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6944fef7",
+   "id": "39da51a5",
    "metadata": {},
    "outputs": [
     {
@@ -2449,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b88b33b6",
+   "id": "74084402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2459,7 +2459,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f1430ba8",
+   "id": "6f7d7e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9445edda",
+   "id": "a736ed1f",
    "metadata": {},
    "outputs": [
     {
@@ -2502,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fdfdcb5d",
+   "id": "a09b5580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d8a745a4",
+   "id": "eaed58d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a844d3",
+   "id": "52a93894",
    "metadata": {},
    "source": [
     "- To step 6 ->"
